--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.6",
     "redis": "^4.6.10",
     "winston": "^3.11.0",
     "ws": "^8.14.2"
