feat: 重大系統更新 - 跨交易所套利功能完善
- 新增 Python 測試腳本和相關文檔
- 完善前端 React 組件和狀態管理
- 優化後端交易所整合 (Binance, Bybit)
- 改進套利引擎性能和監控功能
- 新增訂單簿監控和實時數據處理
- 完善測試覆蓋率和文檔
- 新增多個完成報告和驗收文檔

--- a/server/.example.env
+++ b/server/.example.env
@@ -1,10 +1,11 @@
 # 環境配置
 NODE_ENV=development
 PORT=5000
+MONGODB_URI=mongodb://127.0.0.1:27017/arbitrage
 
 # Bybit API配置 (真實平台 - 非測試網)
-BYBIT_API_KEY=your_bybit_api_key_here
-BYBIT_SECRET=your_bybit_secret_here
+BYBIT_API_KEY=jLb82vRaXPIprsaq4E
+BYBIT_SECRET=ecbPTZY5soFKikZ0gRGWN99dLKOKQMdkteC2
 BYBIT_TESTNET=false
 
 # Binance API配置 (待添加)
