--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
-    "bybit-api": "^4.3.0"
+    "bybit-api": "^4.3.0",
+    "node-fetch": "^3.3.2"
   }
 }
