--- a/server/.example.env
+++ b/server/.example.env
@@ -4,8 +4,8 @@ PORT=5000
 MONGODB_URI=mongodb://127.0.0.1:27017/arbitrage
 
 # Bybit API配置 (真實平台 - 非測試網)
-BYBIT_API_KEY=jLb82vRaXPIprsaq4E
-BYBIT_SECRET=ecbPTZY5soFKikZ0gRGWN99dLKOKQMdkteC2
+BYBIT_API_KEY=
+BYBIT_SECRET=
 BYBIT_TESTNET=false
 
 # Binance API配置 (待添加)
