feat: 實現完整的數據持久化功能
- 實現監控對數據的 JSON 文件持久化存儲
- 修復觸發次數更新和統計功能
- 修復前端刷新清空後端數據的問題
- 修復套利引擎清空監控對數據的問題
- 添加觸發統計的 Redux action 和更新邏輯
- 優化 TWAP 引擎現貨下單邏輯
- 清理不必要的文檔和腳本文件
- 更新 README 文檔說明數據持久化功能

主要改進：
 用戶提交的數據都會持久化保存到後端
 網頁刷新不會影響後端數據
 只有後端重新啟動才清空執行狀態，保留監控對配置
 觸發次數和統計數據會正確更新和保存

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -1,13 +1,11 @@
-# 後端專用 Dockerfile
+# 優化版後端 Dockerfile
 FROM python:3.11-slim
 
 # 設置工作目錄
 WORKDIR /app
 
-# 安裝系統依賴
+# 只安裝必要的系統依賴（移除 gcc/g++）
 RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
@@ -38,3 +36,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
 
 # 啟動命令
 CMD ["python", "-m", "uvicorn", "python_backend.app.main:app", "--host", "0.0.0.0", "--port", "7000"]
+
