--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "專業的加密貨幣雙腿套利交易系統",
   "main": "server/index.js",
   "scripts": {
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "server:dev": "cd server && npm run dev",
-    "client:dev": "cd client && npm start",
+    "docker:start": "docker-compose up -d --build",
+    "docker:stop": "docker-compose down",
+    "docker:restart": "docker-compose restart",
+    "docker:logs": "docker-compose logs -f",
+    "docker:status": "docker-compose ps",
     "build": "cd client && npm run build",
-    "start": "cd server && npm start",
-    "install:all": "npm install && cd server && npm install && cd ../client && npm install",
-    "test": "cd server && npm test && cd ../client && npm test"
+    "install:all": "cd client && npm install"
   },
   "keywords": [
     "cryptocurrency",
